# rust-uno-frontend

./: Cargo.toml  index.html
src/: game.rs  main.rs  packets.rs
static/stylesheets/: index.css
